--- a/build.xml
+++ b/build.xml
@@ -1,8 +1,8 @@
 <project default="compile">
 
 
-    <property name="src.java.dir" location="./src/main/java/Calculator"/>
-    <property name="src.test.dir" location="./src/main/test/CalTest"/>
+    <property name="src.java.dir" location="./src/main/java"/>
+    <property name="src.test.dir" location="./src/main/test"/>
     <property name="result.dir" location="./target"/>
     <property name="result.javaclasses.dir" location="${result.dir}/classes"/>
     <property name="result.testclasses.dir" location="${result.dir}/testclasses"/>
